# dcm_app

./: .gitignore  Dockerfile  LICENSE  README.md  app.py  example_df.csv  other.py  pyproject.toml  q.csv  report.qmd  requirements.txt  small_df.csv  small_q.csv
data_model_fit/: alpha.csv  q.csv
diagnostics/: model_diagnostics.csv  prior_diagnostics.csv
report/: report.qmd  respondent_proficiency_list.csv  respondent_proficiency_raw.csv
src/dcm_app/: __init__.py
