[project]
name = "dcm-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "altair<5",
    "arviz>=0.23.4",
    "cmdstanpy>=1.3.0",
    "great-tables>=0.20.0",
    "htmltools>=0.6.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "pandas>=3.0.1",
    "plotly>=6.5.2",
    "plotnine>=0.15.3",
    "pyhere>=1.0.3",
    "pyjanitor>=0.32.20",
    "shiny>=1.5.1",
    "shinyswatch>=0.10.0",
    "streamlit>=1.19.0",
]

[build-system]
requires = ["uv_build>=0.9.11,<0.10.0"]
build-backend = "uv_build"
