[project]
name = "dcm-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "altair<5",
    "arviz>=0.23.4",
    "arviz-base[h5netcdf,netcdf,zarr]>=1.0.0",
    "arviz-plots[matplotlib,plotly]>=1.0.0",
    "arviz-stats[xarray]>=1.0.0",
    "cmdstanpy>=1.3.0",
    "great-tables>=0.20.0",
    "htmltools>=0.6.0",
    "joblib>=1.5.3",
    "matplotlib>=3.10.8",
    "nbclient>=0.10.4",
    "nbformat>=5.10.4",
    "numpy>=2.4.2",
    "pandas>=3.0.1",
    "pathlib>=1.0.1",
    "plotly>=6.5.2",
    "plotnine>=0.15.3",
    "pyhere>=1.0.3",
    "pyjanitor>=0.32.20",
    "shiny>=1.5.1",
    "shinyswatch>=0.10.0",
    "streamlit>=1.19.0",
]

[build-system]
requires = ["uv_build>=0.9.11,<0.10.0"]
build-backend = "uv_build"
